# NostrShrine

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md
rust-nostr-wasm/: Cargo.toml
rust-nostr-wasm/src/: lib.rs
src/: App.tsx  main.tsx
src/components/: Omikuji.tsx  ShrineHistory.tsx  ShrineVideoDialog.tsx  ShrineVisit.tsx
src/components/admin/: OmikujiGenerator.tsx  OmikujiList.tsx  Settings.tsx  VideoGenerator.tsx  VideoList.tsx
src/config/: constants.ts
src/contexts/: AdminContext.tsx  AuthContext.tsx  RelayContext.tsx  ThemeContext.tsx
src/hooks/: useAdmin.ts  useOmikuji.ts  useOmikujiGenerator.ts  useOmikujiList.ts  useSettings.ts  useShrineHistory.ts  useShrineVisit.ts  useVideoList.ts  useVideoManagement.ts
src/lib/cache/: eventCache.ts  profileCache.ts
src/lib/nostr/: cachedRelay.ts  client.ts  events.ts  nip07.ts  relay.ts
src/pages/: AdminPage.tsx  HomePage.tsx
src/services/llm/: index.ts  openai.ts  types.ts
src/services/upload/: nip96.ts
src/services/video/: cometapi.ts  compression.ts  sora.ts
