[package]
name = "rust-nostr-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
nostr = { version = "0.43", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[profile.release]
opt-level = "z"
lto = true
